--- a/public/layout/sass/_editing.scss
+++ b/public/layout/sass/_editing.scss
@@ -226,7 +226,8 @@
             padding: 8px;
             outline: 0;
             @include type-light;
-            font-size: 12px;
+            font-size: 14px;
+            line-height: 20px;
             color: $fg-grey;
         }
     }
